--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "knex": "^0.95.6",
-    "nodemon": "^2.0.9"
+    "nodemon": "^2.0.9",
+    "pg": "^8.6.0",
+    "puppeteer": "^10.1.0"
   }
 }
